preparation au deploiment initial pour lancement nuits lumiere

--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>La page que vous recherchez n'existe pas ! Erreur 404</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -58,10 +58,9 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>La page que vous recherchez n'existe pas.</h1>
+      <p>Vous vous retrouvez encore une fois dans de beaux draps ... Votre esprit aventurier vous a encore mis dans une curieuse position. Revenez sur vos pas !</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
