--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Erreur 500. Nous sommes confus, quelque chose d'anormal vient de survenir.</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -58,9 +58,9 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>Oups, c'est la cata !</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Le site n'a pas l'air en super forme. Nous travaillons activement au retour de l'ordre dans cette histoire.</p>
   </div>
 </body>
 </html>
